@@ -1,3 +1,7 @@
+06-08-2004 :
+ - wxbRestorePanel : implemented the director modification showing
+     jobid when a job is started.
+
 28-07-2004 :
  - wxbRestorePanel : implemented restore before=<Date> parameter.
 
